--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "filter-button",
   "version": "0.2.0",
-  "description": "custom filter button plugin for strapi",
   "private": false,
+  "description": "Custom filter button plugin for strapi",
   "strapi": {
     "name": "filter-button",
     "description": "Custom filter button plugin for strapi",
